[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/GameMain.gd" type="Script" id=1]
[ext_resource path="res://PlayerControl/joystick.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprite/Player01.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprite/Emey03.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map/Map01.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprite/Emey01.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Font/simhei.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[node name="GameMain" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 608.0 ]
}

[node name="Map01" parent="." instance=ExtResource( 5 )]

[node name="Player01" parent="." instance=ExtResource( 3 )]
position = Vector2( 88, 144 )

[node name="Camera2D" type="Camera2D" parent="Player01"]
position = Vector2( 8, -8 )
rotating = true
current = true
limit_left = 0
limit_top = 0
limit_right = 200
limit_bottom = 350
limit_smoothed = true
smoothing_enabled = true

[node name="Emey01" parent="." instance=ExtResource( 6 )]
position = Vector2( 136, 136 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label2" type="Label" parent="."]
margin_left = 104.0
margin_top = 112.0
margin_right = 168.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "野外战斗"

[node name="Label3" type="Label" parent="."]
margin_left = 120.0
margin_top = 192.0
margin_right = 160.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
text = "武神坛"

[node name="Label7" type="Label" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 48.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 2 )
text = "队伍"

[node name="UI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="UI"]
margin_left = 8.0
margin_top = 248.0
margin_right = 52.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "物品"

[node name="btnShuXing" type="Button" parent="UI"]
margin_left = 56.0
margin_top = 248.0
margin_right = 100.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "属性"

[node name="btnLingShou" type="Button" parent="UI"]
margin_left = 104.0
margin_top = 248.0
margin_right = 148.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "灵兽"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="joystick" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 40, 200 )
scale = Vector2( 0.45, 0.45 )

[node name="Emey02" parent="." instance=ExtResource( 4 )]
position = Vector2( 136, 208 )

[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UI/btnShuXing" to="." method="_on_btnShuXing_pressed"]
[connection signal="pressed" from="UI/btnLingShou" to="." method="_on_btnShuXing_pressed"]
